# prueba-tecnica

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  key.pub  main.tf  variables.tf
backend/: Cargo.toml  diesel.toml
backend/default/: rooms.json
backend/migrations/2024-06-06-064045_base/: up.sql
backend/migrations/2024-06-07-020716_rooms/: down.sql  up.sql
backend/migrations/2024-06-08-014116_base/: down.sql  up.sql
backend/page/: index.html
backend/page/assets/: index-BfZIUXzL.js  index-CpwPIG2o.css  index-DuQEwvT1.js  index-FJsHF466.js
backend/src/: app.rs  config.rs  database.rs  main.rs  middlewares.rs  schema.rs  utils.rs
backend/src/controllers/: auth.rs  mod.rs  rooms.rs
backend/src/models/: mod.rs  room.rs  solving_time.rs  user.rs
backend/src/socket/: mod.rs  server.rs  session.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Alert.tsx  Button.tsx  Header.tsx  Input.tsx  Label.tsx  Layout.tsx  Login.tsx  Panel.tsx  Progress.tsx  Protected.tsx  Register.tsx  Room.tsx  Rooms.tsx  Timer.tsx  Unprotected.tsx
frontend/src/contexts/: AuthContext.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/utils/: api.ts  auth.ts  constants.ts  index.ts  methods.ts
run_manager/: Cargo.toml
run_manager/src/: main.rs
