[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.6.0"
anyhow = "1.0.86"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
rand = "0.8.5"
rust-argon2 = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
